--- a/deploy/crds/org_v1_che_cr.yaml
+++ b/deploy/crds/org_v1_che_cr.yaml
@@ -19,11 +19,12 @@ spec:
     # server image used in Che deployment
     cheImage: ''
     # tag of an image used in Che deployment
-    cheImageTag: 'nightly'
+    cheImageTag: '6.19.0'
     # image:tag used in Devfile registry deployment
-    devfileRegistryImage: 'quay.io/eclipse/che-devfile-registry:nightly'
+    devfileRegistryImage: ''
+    externalDevfileRegistry: true
     # image:tag used in plugin registry deployment
-    pluginRegistryImage: 'quay.io/eclipse/che-plugin-registry:nighlty'
+    pluginRegistryImage: 'quay.io/eclipse/che-plugin-registry:6.19.0'
     # defaults to `che`. When set to `codeready`, CodeReady Workspaces is deployed
     # the difference is in images, labels, exec commands
     cheFlavor: ''
@@ -106,7 +107,7 @@ spec:
     # secret used in oAuthClient. Auto generated if left blank
     oAuthSecret: ''
     # image:tag used in Keycloak deployment
-    identityProviderImage: 'eclipse/che-keycloak:nightly'
+    identityProviderImage: 'eclipse/che-keycloak:6.19.0'
   k8s:
     # your global ingress domain
     ingressDomain: '192.168.99.101.nip.io'
